objects/ssot__GameReward__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ColorText__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentRewardCount__c</fullName>
        <label>Current Reward Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GameDefinitionId__c</fullName>
        <label>Game Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Game Reward Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImageUrl__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumRewardCount__c</fullName>
        <label>Maximum Reward Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RewardDefinitionId__c</fullName>
        <label>Reward Definition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RewardDefinitionObject__c</fullName>
        <label>Reward Definition Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RewardType__c</fullName>
        <label>Reward Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RewardValueNumber__c</fullName>
        <label>Reward Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WinProbabilityNumber__c</fullName>
        <label>Win Probability</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227466976_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GameReward_GameDefinitionId_map_Game_rel</label>
        <referenceTo>ssot__GameDefinition__dlm</referenceTo>
        <relationshipLabel>GameReward_GameDefinitionId_map_Game_rel</relationshipLabel>
        <relationshipName>rel_1729227466976_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729831702448_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GameReward_RewardDefinitionId_map_Lo_rel</label>
        <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
        <relationshipLabel>GameReward_RewardDefinitionId_map_Lo_rel</relationshipLabel>
        <relationshipName>rel_1729831702448_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729832361052_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GameReward_RewardDefinitionId_map_Vo_rel</label>
        <referenceTo>ssot__VoucherDefinition__dlm</referenceTo>
        <relationshipLabel>GameReward_RewardDefinitionId_map_Vo_rel</relationshipLabel>
        <relationshipName>rel_1729832361052_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>